@@ -94,6 +94,17 @@ EphyAboutModule::NewChannel(nsIURI *aURI,
 	return NS_ERROR_ILLEGAL_VALUE;
 }
 
+#ifdef HAVE_GECKO_1_9
+/* unsigned long getURIFlags(in nsIURI aURI); */
+NS_IMETHODIMP
+EphyAboutModule::GetURIFlags (nsIURI *aURI,
+			      PRUint32 *_result)
+{
+	*_result = 0;
+	return NS_OK;
+}
+#endif
+
 /* private functions */
 
 nsresult
