@@ -1,3 +1,9 @@
+2006-06-19  Christian Persch  <chpe@cvs.gnome.org>
+
+	* embed/mozilla/EphyAboutModule.cpp:
+	
+	Look! Yet Another Mozilla API Change!
+
 2006-06-18  Christian Persch  <chpe@cvs.gnome.org>
 
         * configure.ac:
